--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,11 @@
 </head>
 
 <body>
-  <h1>#3MVotesForClimate</h1>
+  <header>
+    <h1>#3MVotesForClimate</h1>
+    <a href="https://ourenergy2030.org/"><img class="logo" src="./OurENERGY2030.png" alt="OurEnergy2030" /></a>
+    <img class="logo" src="./VISION2030-logo-v3.png" alt="Vision 2030" />
+  </header>
   <article>
     <p class="emphasis">As the window for keeping global warming below 1.5 degrees continues to shrink, we stand at the
       doorstep of the
