Add MC form and implement mobile styling

--- a/src/index.html
+++ b/src/index.html
@@ -33,18 +33,197 @@
       ambitious renewable energy plans could be decisive in the election’s outcome.</p>
     <p>Stay tuned for the campaign’s official launch on 12 – 12 – 12. (December 12, 2021 at 12:00 NN). In the meantime,
       join our mailing list to support this campaign:</p>
+
+    <!-- Begin Mailchimp Signup Form -->
+    <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+    <style type="text/css">
+      #mc_embed_signup {
+        background: #fff;
+        clear: left;
+        font: 14px Helvetica, Arial, sans-serif;
+      }
+
+      /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+    </style>
+    <div id="mc_embed_signup">
+      <form
+        action="https://3millionviewforclimate.us5.list-manage.com/subscribe/post?u=c4c14b3c25c045d8b8af3f52f&amp;id=bf6a5dcd2b"
+        method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank"
+        novalidate>
+        <div id="mc_embed_signup_scroll">
+          <h2>Join our mailing list to support this campaign:</h2>
+          <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+          <div class="mc-field-group">
+            <label for="mce-FNAME">First Name </label>
+            <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+          </div>
+          <div class="mc-field-group">
+            <label for="mce-LNAME">Last Name </label>
+            <input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+          </div>
+          <div class="mc-field-group size1of2">
+            <label for="mce-DOB-month">Date of Birth <span class="asterisk">*</span>
+            </label>
+            <div class="datefield">
+              <span class="subfield dayfield"><input class="datepart required" type="text" pattern="[0-9]*" value=""
+                  placeholder="DD" size="2" maxlength="2" name="DOB[day]" id="mce-DOB-day"></span> /
+              <span class="subfield monthfield"><input class="datepart required" type="text" pattern="[0-9]*" value=""
+                  placeholder="MM" size="2" maxlength="2" name="DOB[month]" id="mce-DOB-month"></span> /
+              <span class="subfield yearfield"><input class="datepart required" type="text" pattern="[0-9]*" value=""
+                  placeholder="YYYY" size="4" maxlength="4" name="DOB[year]" id="mce-DOB-year"></span>
+              <span class="small-meta nowrap">( dd / mm / yyyy )</span>
+            </div>
+          </div>
+          <div class="mc-field-group input-group">
+            <strong>Are you a registered voter? <span class="asterisk">*</span>
+            </strong>
+            <ul>
+              <li><input type="radio" value="Yes" name="RVOTER" id="mce-RVOTER-0"><label for="mce-RVOTER-0">Yes</label>
+              </li>
+              <li><input type="radio" value="No" name="RVOTER" id="mce-RVOTER-1"><label for="mce-RVOTER-1">No</label>
+              </li>
+            </ul>
+          </div>
+          <div class="mc-field-group">
+            <label for="mce-ADDRESS">If yes, where are you registered? <span class="asterisk">*</span>
+            </label>
+            <select name="ADDRESS" class="required" id="mce-ADDRESS">
+              <option value=""></option>
+              <option value="Abra">Abra</option>
+              <option value="Agusan del Norte">Agusan del Norte</option>
+              <option value="Agusan del Sur">Agusan del Sur</option>
+              <option value="Aklan">Aklan</option>
+              <option value="Albay">Albay</option>
+              <option value="Antique">Antique</option>
+              <option value="Apayao">Apayao</option>
+              <option value="Aurora">Aurora</option>
+              <option value="Basilan">Basilan</option>
+              <option value="Bataan">Bataan</option>
+              <option value="Batanes">Batanes</option>
+              <option value="Batangas">Batangas</option>
+              <option value="Benguet">Benguet</option>
+              <option value="Biliran">Biliran</option>
+              <option value="Bohol">Bohol</option>
+              <option value="Bukidnon">Bukidnon</option>
+              <option value="Bulacan">Bulacan</option>
+              <option value="Cagayan">Cagayan</option>
+              <option value="Camarines Norte">Camarines Norte</option>
+              <option value="Camarines Norte">Camarines Norte</option>
+              <option value="Camarines Sur">Camarines Sur</option>
+              <option value="Camiguin">Camiguin</option>
+              <option value="Capiz">Capiz</option>
+              <option value="Catanduanes">Catanduanes</option>
+              <option value="Cavite">Cavite</option>
+              <option value="Cebu">Cebu</option>
+              <option value="Cotabato">Cotabato</option>
+              <option value="Davao de Oro">Davao de Oro</option>
+              <option value="Davao del Norte">Davao del Norte</option>
+              <option value="Davao del Sur">Davao del Sur</option>
+              <option value="Dinagat Islands">Dinagat Islands</option>
+              <option value="Guimaras">Guimaras</option>
+              <option value="Ifugao">Ifugao</option>
+              <option value="Ilocos Norte">Ilocos Norte</option>
+              <option value="Ilocos Sur">Ilocos Sur</option>
+              <option value="Iloilo">Iloilo</option>
+              <option value="Isabela">Isabela</option>
+              <option value="Kalinga">Kalinga</option>
+              <option value="La Union">La Union</option>
+              <option value="Laguna">Laguna</option>
+              <option value="Lanao del Norte">Lanao del Norte</option>
+              <option value="Lanao del Sur">Lanao del Sur</option>
+              <option value="Leyte">Leyte</option>
+              <option value="Maguindanao">Maguindanao</option>
+              <option value="Marinduque">Marinduque</option>
+              <option value="Masbate">Masbate</option>
+              <option value="Metro Manila">Metro Manila</option>
+              <option value="Misamis Occidental">Misamis Occidental</option>
+              <option value="Misamis Oriental">Misamis Oriental</option>
+              <option value="Mountain Province">Mountain Province</option>
+              <option value="Negros Occidental">Negros Occidental</option>
+              <option value="Negros Oriental">Negros Oriental</option>
+              <option value="Northern Samar">Northern Samar</option>
+              <option value="Nueva Ecija">Nueva Ecija</option>
+              <option value="Nueva Vizcaya">Nueva Vizcaya</option>
+              <option value="Occidental Mindoro">Occidental Mindoro</option>
+              <option value="Oriental Mindoro">Oriental Mindoro</option>
+              <option value="Palawan">Palawan</option>
+              <option value="Pampanga">Pampanga</option>
+              <option value="Pangasinan">Pangasinan</option>
+              <option value="Quezon">Quezon</option>
+              <option value="Quirino">Quirino</option>
+              <option value="Rizal">Rizal</option>
+              <option value="Romblon">Romblon</option>
+              <option value="Samar">Samar</option>
+              <option value="Sarangani">Sarangani</option>
+              <option value="Siquijor">Siquijor</option>
+              <option value="Sorsogon">Sorsogon</option>
+              <option value="South Cotabato">South Cotabato</option>
+              <option value="Southern Leyte">Southern Leyte</option>
+              <option value="Sultan Kudarat">Sultan Kudarat</option>
+              <option value="Sulu">Sulu</option>
+              <option value="Surigao del Norte">Surigao del Norte</option>
+              <option value="Surigao del Sur">Surigao del Sur</option>
+              <option value="Tarlac">Tarlac</option>
+              <option value="Tawi-Tawi">Tawi-Tawi</option>
+              <option value="Zambales">Zambales</option>
+              <option value="Zamboanga del Norte">Zamboanga del Norte</option>
+              <option value="Zamboanga del Sur">Zamboanga del Sur</option>
+              <option value="Zamboanga Sibugay">Zamboanga Sibugay</option>
+
+            </select>
+          </div>
+          <div class="mc-field-group">
+            <label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
+            </label>
+            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+          </div>
+          <div id="mce-responses" class="clear">
+            <div class="response" id="mce-error-response" style="display:none"></div>
+            <div class="response" id="mce-success-response" style="display:none"></div>
+          </div>
+          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+              name="b_c4c14b3c25c045d8b8af3f52f_bf6a5dcd2b" tabindex="-1" value=""></div>
+          <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
+              class="button"></div>
+        </div>
+      </form>
+    </div>
+    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+    <script
+      type='text/javascript'>(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[6] = 'DOB'; ftypes[6] = 'date'; fnames[3] = 'RVOTER'; ftypes[3] = 'radio'; fnames[5] = 'ADDRESS'; ftypes[5] = 'dropdown'; fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
+    <!--End mc_embed_signup-->
+
+    <section class="about">
+      <h2>Who is OurEnergy2030?</h2>
+
+      <p>OurEnergy2030, launched in Manila in February 2020, is the next-generation coalition for a responsive and
+        inclusive energy transition. It is a youth-led intergenerational alliance-building platform to define 2020-2030
+        as
+        the “decisive decade of action.” Since its launch, the coalition has received national, Asia-wide, and global
+        media coverage, gained over 25,000 followers on its Facebook page, and produced social media videos and
+        infographics reaching over 2 million users.</p>
+    </section>
+
   </article>
+
   <div class="countdown">
     <div class="election">
-      <div class="title"></div>
-      <div class="timer"></div>
+      <div class="label">
+        <div class="title"></div>
+        <div class="timer"></div>
+      </div>
     </div>
     <div class="registration">
-      <div class="title"></div>
-      <div class="timer"></div>
+      <div class="label">
+        <div class="title"></div>
+        <div class="timer"></div>
+      </div>
     </div>
   </div>
   <script type="module" src="/index.js"></script>
+
 </body>
 
 </html>
