Add meta details and mobile logos

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,19 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="#3MVotesForClimate" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description"
+    content="#3MillionVotesForClimate aims to mobilize youth voters to vote for climate in May 2022, the first national elections since the pandemic. " />
+  <meta name="author" content="OurEnergy2030.org" />
+  <meta property="og:title" content="#3MillionVotesForClimate" />
+  <meta property="og:type" content="website" />
+  <meta property="og:description"
+    content="#3MillionVotesForClimate aims to mobilize youth voters to vote for climate in May 2022, the first national elections since the pandemic. " />
+  <meta property="og:image" content="/thumbnail.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:site_name" content="#3MillionVotesForClimate" />
+
   <title>#3MVotesForClimate</title>
   <link href="https://api.fontshare.com/css?f[]=clash-grotesk@400,500&f[]=general-sans@400,500&display=swap"
     rel="stylesheet">
@@ -31,8 +43,7 @@
       climate-aware youth. This number — about 10% of total votes cast in 2016— is significant, meaning climate policy
       and
       ambitious renewable energy plans could be decisive in the election’s outcome.</p>
-    <p>Stay tuned for the campaign’s official launch on 12 – 12 – 12. (December 12, 2021 at 12:00 NN). In the meantime,
-      join our mailing list to support this campaign:</p>
+    <p>Stay tuned for the campaign’s official launch on 12 – 12 – 12. (December 12, 2021 at 12:00 NN).</p>
 
     <!-- Begin Mailchimp Signup Form -->
     <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
@@ -208,6 +219,11 @@
 
   </article>
 
+  <footer>
+    <a href="https://ourenergy2030.org/"><img class="logo" src="./OurENERGY2030.png" alt="OurEnergy2030" /></a>
+    <img class="logo" src="./VISION2030-logo-v3.png" alt="Vision 2030" />
+  </footer>
+
   <div class="countdown">
     <div class="election">
       <div class="label">
@@ -222,8 +238,8 @@
       </div>
     </div>
   </div>
-  <script type="module" src="/index.js"></script>
 
+  <script type="module" src="/index.js"></script>
 </body>
 
 </html>
