--- a/src/index.html
+++ b/src/index.html
@@ -239,6 +239,16 @@
   </div>
 
   <script type="module" src="/index.js"></script>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DXS3F5WKF4"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-DXS3F5WKF4');
+  </script>
 </body>
 
 </html>
