--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description"
-    content="#3MillionVotesForClimate aims to mobilize youth voters to vote for climate in May 2022, the first national elections since the pandemic. " />
+  <meta name="description" content="Vote for climate on May 2022" />
   <meta name="author" content="OurEnergy2030.org" />
   <meta property="og:title" content="#3MillionVotesForClimate" />
   <meta property="og:type" content="website" />
-  <meta property="og:description"
-    content="#3MillionVotesForClimate aims to mobilize youth voters to vote for climate in May 2022, the first national elections since the pandemic. " />
+  <meta property="og:description" content="Vote for climate on May 2022" />
   <meta property="og:image" content="/thumbnail.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
